<resources>
    <string name="app_name">Goozix test task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This password is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_user">Your Profile</string>
    <string name="title_activity_about_user">AboutUserActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="owned_private_repositores_count">Owned Private Repositores count</string>
    <string name="total_private_repositories_count">Total Private Repositories count</string>
    <string name="private_gists_count">Private_gists_count</string>
    <string name="bio">bio</string>
    <string name="location">location</string>
    <string name="blog">blog</string>
    <string name="company">company</string>
    <string name="name">name</string>
    <string name="editing_a_profile">Editing a profile</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_repos">ReposActivity</string>
</resources>
